tests/invalid/ListConversion_Invalid_1.whiley
function f(byte[] ls) -> int:
    return 0

method main():
    f([1, 2, 3])
